--- a/src/view/FormSecretario.form
+++ b/src/view/FormSecretario.form
@@ -218,7 +218,7 @@
                 <Property name="useNullLayout" type="boolean" value="false"/>
               </Layout>
               <SubComponents>
-                <Container class="javax.swing.JPanel" name="warningPanel1">
+                <Container class="javax.swing.JPanel" name="warningPanelData">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="0" green="99" red="0" type="rgb"/>
@@ -234,7 +234,7 @@
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="labMessage" pref="666" max="32767" attributes="0"/>
+                              <Component id="labelWarningData" pref="666" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnMessage" min="-2" pref="40" max="-2" attributes="0"/>
                           </Group>
@@ -242,7 +242,7 @@
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="labMessage" alignment="0" max="32767" attributes="0"/>
+                          <Component id="labelWarningData" alignment="0" max="32767" attributes="0"/>
                           <Component id="btnMessage" min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
                     </DimensionLayout>
@@ -268,7 +268,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMessageActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="javax.swing.JLabel" name="labMessage">
+                    <Component class="javax.swing.JLabel" name="labelWarningData">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Nunito" size="14" style="1"/>
@@ -513,7 +513,7 @@
                 <Property name="useNullLayout" type="boolean" value="false"/>
               </Layout>
               <SubComponents>
-                <Container class="javax.swing.JPanel" name="warningPanel">
+                <Container class="javax.swing.JPanel" name="warningPanelForm">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="33" green="33" red="ff" type="rgb"/>
@@ -529,7 +529,7 @@
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="jLabel2" pref="666" max="32767" attributes="0"/>
+                              <Component id="labelWarningForm" pref="666" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnError" min="-2" pref="40" max="-2" attributes="0"/>
                           </Group>
@@ -537,7 +537,7 @@
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
+                          <Component id="labelWarningForm" alignment="0" max="32767" attributes="0"/>
                           <Component id="btnError" min="-2" pref="40" max="-2" attributes="0"/>
                       </Group>
                     </DimensionLayout>
@@ -563,7 +563,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnErrorActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="javax.swing.JLabel" name="jLabel2">
+                    <Component class="javax.swing.JLabel" name="labelWarningForm">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Nunito" size="14" style="1"/>
